--- a/index.html
+++ b/index.html
@@ -2,69 +2,79 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Odin Landing Page</title>
+        <title>Coffee Page</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <header>
-            <h3>Header Logo</h3>
-            <div>
-                <a>header link one</a>
-                <a>header link two</a>
-                <a>header link three</a>
+        <nav class="navbar">
+            <div class="header-logo">
+                <img class="coffee" src="./img/coffee.png">
             </div>
-        </header>
+            <div class="header-link">
+                <a>About</a>
+                <a>Shop</a>
+                <a>Contact</a>
+            </div>
+        </nav>
+
+        <div class="hero">
+            <div class="hero-item">
+                <h1 class="hero-main">Coffee is awesome</h1>
+                <p class="hero-second">
+                    The best beverage in the world.
+                </p>
+                <button class="sign-up">Sign up</button>
+            </div>
+            <div class="hero-item">
+                <img class="latte" src="./img/latte.jpg">
+            </div>
+        </div>
+
         <div>
-            <h1>This website is awesome</h1>
-            <p>
-                This website has some subtext that goes here under the main title. 
-                It's a smaller font and the color is lower contrast.
+            <div class="types">
+                <h1>Types of Coffee</h1>
+            </div>
+            <div class="info">
+                <div class="info-item">
+                    <img class="coffee-img" src="./img/espresso.jpg">
+                    <p>Espresso</p>
+                </div>
+                <div class="info-item">
+                    <img class="coffee-img" src="./img/americano.jpg">
+                    <p>Americano</p>
+                </div>
+                <div class="info-item">
+                    <img class="coffee-img" src="./img/latte1.jpg">
+                    <p>Latte</p>
+                </div>
+                <div class="info-item">
+                    <img class="coffee-img" src="./img/cappuccino.jpg">
+                    <p>Cappuccino</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="quote">
+            <p class="quote-text">
+                Three cups of coffee a day keeps the doctor away!
             </p>
-            <button>Sign up</button>
-            <img src="./img/tacos.jpg">
+            <p class="quote-by">
+                -Henry Rollins
+            </p>
         </div>
-        <div>
-            <h1>Some random information.</h1>
-            <div>
-                <div class="box">
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-                <div class="box">
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-                <div class="box">
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-                <div class="box">
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
+
+        <div class="call-to-action">
+            <div class="call-item sign-up-text">
+                <h3>Keep updated with Coffee News!</h3>
+                <p>Sign up for the latest information right now!</p>
+            </div>
+            <div class="call-item sign-up-button">
+                <button>Sign up</button>
             </div>
         </div>
-        <div>
-            <div>
-                <h3>
-                    This is an inspiring quote, or a testimonial from a customer. Maybe
-                     it's just filling up space, or maybe people will actually read it. Who
-                     knows? All I know is that it looks nice.
-                </h3>
-            </div>
-            <div>
-                <h4>-Thor, God of Thunder</h4>
-            </div>
-        </div>
-        <div>
-            <div>
-                <div>
-                    <h4>Call to action! It's time!</h4>
-                    <p>Sign up for our product by clicking the button right over there!</p>
-                </div>
-                <div>
-                    <button>Sign up</button>
-                </div>
-            </div>
-        </div>
-        <footer>
-            <p>Copyright © The Odin Project 2021</p>
+
+        <footer class="foot">
+            <p>Copyright © Toh Pin Ren 2022</p>
         </footer>
     </body>
 </html>
